--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
+    "@types/multer": "^1.4.11",
+    "aws-sdk": "^2.1570.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "mongoose": "^8.2.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
