--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/websockets": "^10.3.8",
     "@types/multer": "^1.4.11",
     "aws-sdk": "^2.1570.0",
     "bcrypt": "^5.1.1",
@@ -39,6 +42,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
